Move to TOS definition from previous privacy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
                             {{ if and (.Site.Params.PoweredByHugo) (eq .Site.Params.PoweredByHugo "True") }}
                             Powered by <a href="http://gohugo.io" target="_blank">Hugo</a><br />
                             {{ end }}
-                            <a href="/privacy">Privacy</a>
+                            <a href="/tos">Terms of Service</a>
                         </p>
                     </div>
                 </div>
