--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -36,7 +36,7 @@
             <p>{{ .Content }}</p>
 
             <aside>
-                {{ with .Params.tags }}<div class="section">{{ range . }}<a href="{{ $.Site.BaseURL}}/tags/{{ . }}" class="tag">{{ . }}</a> {{ end }}</div>{{ end }}
+                {{ with .Params.tags }}<div class="section">{{ range . }}<a href="{{ $.Site.BaseURL}}/tags/{{ . | urlize }}" class="tag">{{ . }}</a> {{ end }}</div>{{ end }}
                 <!-- <div class="section share">
                     <a href="http://www.facebook.com/sharer.php?src=bm&u={{ .Permalink }}&t={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-facebook"></i></a>
                     <a href="http://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}&tw_p=tweetbutton" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-twitter"></i></a>
