--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,6 +20,15 @@
 
         <script src="/js/jquery-3.1.1.min.js"></script>
         <script src="/js/bootstrap-3.3.7.min.js"></script>
+        <script type="text/javascript">
+            (function() {
+                var css = document.createElement('link');
+                css.href = '/css/font-awesome-4.7.0.min.css';
+                css.rel = 'stylesheet';
+                css.type = 'text/css';
+                document.getElementsByTagName('head')[0].appendChild(css);
+            })();
+        </script>
         {{ partial "additional_js.html" . }}
         {{ partial "ga.js" . }}
     </body>
