--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,11 +33,15 @@
                 {{ if .Params.location }}
                 <address><i class="fa fa-globe"></i> {{ .Params.location.city }}, {{ .Params.location.country }}</address>
                 {{ end }}
-                {{ if or (.Params.categories) (.Params.tags) }}
-                    <div class="section">
-                        {{ range .Params.categories }}<i class="fa fa-folder-o"></i> <a href="{{ $.Site.BaseURL}}/categories/{{ . | urlize }}" class="tag">{{ . }}</a> {{ end }}
-                        {{ range .Params.tags }}<i class="fa fa-tag"></i> <a href="{{ $.Site.BaseURL}}/tags/{{ . | urlize }}" class="tag">{{ . }}</a> {{ end }}
-                    </div>
+                {{ if .Params.categories }}
+                <div class="section">
+                    <i class="fa fa-folder-o"></i> {{ range $i, $e := sort .Params.categories }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL}}/categories/{{ $e | urlize }}" class="tag">{{ $e }}</a>{{ end }}
+                </div>
+                {{ end }}
+                {{ if .Params.tags }}
+                <div class="section">
+                    <i class="fa fa-tag"></i> {{ range $i, $e := sort .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL}}/tags/{{ $e | urlize }}" class="tag">{{ $e }}</a>{{ end }}
+                </div>
                 {{ end }}
             </header>
 
