Remove emtpy paragraph

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -46,7 +46,7 @@
             </header>
 
             <!-- <img class="img-responsive" src="http://placehold.it/710x230" alt=""> -->
-            <p>{{ .Content }}</p>
+            {{ .Content }}
 
             <aside>
                 <!-- <div class="section share">
