--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,8 @@
     <meta name="author" content="">
 
     <link rel="stylesheet" href="/css/bootstrap-3.3.7.min.css">
-    <link rel="stylesheet" href="/css/theme_style.css">
+    <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/site.css">
     {{ partial "additional_css.html" . }}
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ .Site.BaseURL }}/index.xml">
