--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -30,3 +30,8 @@ address {
 footer {
     text-align: center;
 }
+
+li.navbar-item.active a {
+    color: #333333 !important;
+    background-color: #FFFFFF !important;
+}
