--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,9 +23,9 @@
             <!-- /.row -->
             </footer>
         </div>
-
-        <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/bootstrap-3.3.7.min.js"></script>
+        <script src="/js/jquery-3.2.1.slim.min.js"></script>
+        <script src="/js/popper-1.11.0.min.js"></script>
+        <script src="/js/bootstrap-4.0.0-beta.min.js"></script>
         <script type="text/javascript">
             (function() {
                 var css = document.createElement('link');
@@ -35,6 +35,7 @@
                 document.getElementsByTagName('head')[0].appendChild(css);
             })();
         </script>
+        {{ partial "additional_css_footer.html" . }}
         {{ partial "additional_js.html" . }}
         {{ partial "ga.js" . }}
     </body>
