--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
 
         <script src="/js/jquery-3.1.1.min.js"></script>
         <script src="/js/bootstrap-3.3.7.min.js"></script>
-        <script type="text/javascript">
+        <script>
             (function() {
                 var css = document.createElement('link');
                 css.href = '/css/font-awesome-4.7.0.min.css';
