--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,9 +1,11 @@
-<article class="well">
-    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-    <p>
-        <i class="fa fa-clock-o"></i> Posted on {{ $.Date.Format "January 2, 2006" }}{{ if .Params.location }} - <i class="fa fa-globe"></i> {{ .Params.location.city }}, {{ .Params.location.country }}{{ end }}
-    </p>
-    <!-- <img class="img-responsive" src="http://placehold.it/710x230" alt=""> -->
-    <p>{{ .Summary }}</p>
-    <a class="btn btn-primary" href="{{ .Permalink }}">Read More <i class="fa fa-chevron-right"></i></a>
-</article>
+<div class="card mt-4">
+    <div class="card-body">
+        <h2 class="my-0 font-weight-normal"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        <p>
+            <i class="fa fa-clock-o"></i> Posted on {{ $.Date.Format "January 2, 2006" }}{{ if .Params.location }} - <i class="fa fa-globe"></i> {{ .Params.location.city }}, {{ .Params.location.country }}{{ end }}
+        </p>
+        <!-- <img class="img-responsive" src="http://placehold.it/710x230" alt=""> -->
+        <p>{{ .Summary }}</p>
+        <a class="btn btn-primary" href="{{ .Permalink }}">Read More <i class="fa fa-chevron-right"></i></a>
+    </div>
+</div>
