--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,65 +1,29 @@
-{{ partial "header.html" . }}
+<!DOCTYPE html>
+<html lang="{{ .Site.LanguageCode }}">
 
-<div class="row">
-    <div class="col-lg-8">
+    <head>
+        {{ partial "head.html" . }}
+    </head>
 
-        <article class="single well" itemscope="itemscope" itemtype="http://schema.org/Article">
-            <meta itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" content="{{ .Site.BaseURL }}"/>
-            <meta itemprop="dateModified" content="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">
-            <meta itemprop="headline" content="{{ .Title }}">
-            <meta itemprop="description" content="{{ .Summary }}">
-            <meta itemprop="url" content="{{ .Permalink }}">
-            <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-                <meta itemprop="url" content="{{ $.Site.BaseURL }}images/{{ with .Params.image }}{{ . }}{{ else }}default.jpg{{ end }}" />
-                <meta itemprop="width" content="800">
-                <meta itemprop="height" content="800">
-            </div>
-            <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-                <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                    <meta itemprop="url" content="{{ .Site.BaseURL }}images/logo.jpg">
-                    <meta itemprop="width" content="100">
-                    <meta itemprop="height" content="100">
+    <body>
+        <div class="container">
+            {{ partial "navbar.html" . }}
+
+            <div class="row">
+                <div class="col-md-8">
+                    {{ partial "article.html" . }}
                 </div>
-                <meta itemprop="name" content="{{ .Site.Title }}">
+                <aside class="col-md-4">
+                    {{ partial "sidebar.html" . }}
+                </aside>
             </div>
-            <div itemprop="author" itemscope itemtype="https://schema.org/Person">
-                <meta itemprop="name" content="{{ .Site.Params.Author }}">
-            </div>
-            <header class="article-header">
-                <h1>{{ .Title }}</h1>
-                {{ if not .Date.IsZero }}
-                <time itemprop="datePublished" pubdate="pubdate" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}"><i class="fa fa-clock-o"></i> Posted on {{ .Date.Format "January 2, 2006" }}</time>
-                {{ end }}
-                {{ if .Params.location }}
-                <address><i class="fa fa-globe"></i> {{ .Params.location.city }}, {{ .Params.location.country }}</address>
-                {{ end }}
-                {{ if .Params.categories }}
-                <div class="section">
-                    <i class="fa fa-folder-o"></i> {{ range $i, $e := sort .Params.categories }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL}}/categories/{{ $e | urlize }}" class="tag">{{ $e }}</a>{{ end }}
-                </div>
-                {{ end }}
-                {{ if .Params.tags }}
-                <div class="section">
-                    <i class="fa fa-tag"></i> {{ range $i, $e := sort .Params.tags }}{{if $i}}, {{end}}<a href="{{ $.Site.BaseURL}}/tags/{{ $e | urlize }}" class="tag">{{ $e }}</a>{{ end }}
-                </div>
-                {{ end }}
-            </header>
 
-            <!-- <img class="img-responsive" src="http://placehold.it/710x230" alt=""> -->
-            {{ .Content }}
+            {{ partial "footer.html" . }}
+        </div>
 
-            <aside>
-                <!-- <div class="section share">
-                    <a href="http://www.facebook.com/sharer.php?src=bm&u={{ .Permalink }}&t={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}&tw_p=tweetbutton" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-twitter"></i></a>
-                    <a href="https://plus.google.com/share?url={{ .Permalink }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-google-plus"></i></a>
-                    <a href="http://getpocket.com/edit?url={{ .Permalink }}&title={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fa fa-get-pocket"></i></a>
-                </div> -->
-                {{ partial "comments.html" . }}
-            </aside>
-        </article>
-
-    </div>
-    {{ partial "sidebar.html" . }}
-</div>
-{{ partial "footer.html" . }}
+        {{ partial "scripts.html" . }}
+        {{ partial "additional_css_footer.html" . }}
+        {{ partial "additional_js.html" . }}
+        {{ partial "ga.js" . }}
+    </body>
+</html>
