--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,42 +1,24 @@
-            <footer>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>
-                            <span id="copyright">&copy;</span>
-                            {{ if eq .Site.Params.LaunchYear .Site.LastChange.Year }}
-                                {{ .Site.LastChange.Year }}
-                            {{ else }}
-                                {{ .Site.Params.LaunchYear }}-{{ .Site.LastChange.Year }}
-                            {{ end }}
-                            {{ if .Site.Params.License }}
-                                <a href="{{ .Site.Params.License.url }}">{{ .Site.Params.License.name }}</a> -
-                            {{ end }}
-                                {{ .Site.Params.Copyright }}
-                                <br />
-                            {{ if and (.Site.Params.PoweredByHugo) (eq .Site.Params.PoweredByHugo "True") }}
-                            Powered by <a href="http://gohugo.io" target="_blank">Hugo</a><br />
-                            {{ end }}
-                            <a href="/cookies">Cookies policy</a>
-                        </p>
-                    </div>
-                </div>
-            <!-- /.row -->
-            </footer>
+<footer class="mt-4">
+    <div class="row">
+        <div class="col-lg-12">
+            <p>
+                <span id="copyright">&copy;</span>
+                {{ if eq .Site.Params.LaunchYear .Site.LastChange.Year }}
+                    {{ .Site.LastChange.Year }}
+                {{ else }}
+                    {{ .Site.Params.LaunchYear }}-{{ .Site.LastChange.Year }}
+                {{ end }}
+                {{ if .Site.Params.License }}
+                    <a href="{{ .Site.Params.License.url }}">{{ .Site.Params.License.name }}</a> -
+                {{ end }}
+                    {{ .Site.Params.Copyright }}
+                    <br />
+                {{ if and (.Site.Params.PoweredByHugo) (eq .Site.Params.PoweredByHugo "True") }}
+                Powered by <a href="http://gohugo.io" target="_blank">Hugo</a><br />
+                {{ end }}
+                <a href="/cookies">Cookies policy</a>
+            </p>
         </div>
-        <script src="/js/jquery-3.2.1.slim.min.js"></script>
-        <script src="/js/popper-1.11.0.min.js"></script>
-        <script src="/js/bootstrap-4.0.0-beta.min.js"></script>
-        <script type="text/javascript">
-            (function() {
-                var css = document.createElement('link');
-                css.href = '/css/font-awesome-4.7.0.min.css';
-                css.rel = 'stylesheet';
-                css.type = 'text/css';
-                document.getElementsByTagName('head')[0].appendChild(css);
-            })();
-        </script>
-        {{ partial "additional_css_footer.html" . }}
-        {{ partial "additional_js.html" . }}
-        {{ partial "ga.js" . }}
-    </body>
-</html>
+    </div>
+<!-- /.row -->
+</footer>
