--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,8 +1,7 @@
-<aside class="col-md-4">
-
-    {{ if .Site.Menus.main }}
-    <div class="well">
-        <h3>Main menu</h3>
+{{ if .Site.Menus.main }}
+<div class="card mt-4">
+    <div class="card-body">
+        <h3 class="my-0 font-weight-normal">Main menu</h3>
         <ul class="list-unstyled">
         {{ $currentNode := . }}
         {{ range .Site.Menus.main }}
@@ -10,11 +9,13 @@
         {{end}}
         </ul>
     </div>
-    {{ end }}
+</div>
+{{ end }}
 
-    {{ if .Site.Menus.social }}
-    <div class="well">
-        <h3>Social networks</h3>
+{{ if .Site.Menus.social }}
+<div class="card mt-4">
+    <div class="card-body">
+        <h3 class="my-0 font-weight-normal">Social networks</h3>
         <ul class="list-unstyled">
         {{ $currentNode := . }}
         {{ range .Site.Menus.social }}
@@ -22,19 +23,20 @@
         {{end}}
         </ul>
     </div>
-    {{ end }}
+</div>
+{{ end }}
 
-    {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
+{{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
     {{ if in $.Site.Params.TaxonomiesInSidebar $taxonomyname }}
-    <div class="well">
-        <h3 class="text-capitalize">{{ $taxonomyname }}</h3>
-        <ul class="list-unstyled">
-        {{ range $name, $value := $taxonomy }}
-            <li><a href="/{{ $taxonomyname }}/{{ $name | urlize }}">{{ $name }}</a></li>
-        {{ end }}
-        </ul>
+    <div class="card mt-4">
+        <div class="card-body">
+            <h3 class="my-0 font-weight-normal text-capitalize">{{ $taxonomyname }}</h3>
+            <ul class="list-unstyled">
+            {{ range $name, $value := $taxonomy }}
+                <li><a href="/{{ $taxonomyname }}/{{ $name | urlize }}">{{ $name }}</a></li>
+            {{ end }}
+            </ul>
+        </div>
     </div>
     {{ end }}
-    {{ end }}
-
-</aside>
+{{ end }}
