--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
 <meta name="description" content="{{ .Site.Params.Subtitle }}">
 <meta name="author" content="">
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/bootstrap-4.3.1.min.css">
 <link rel="stylesheet" href="/css/theme.css">
 <link rel="stylesheet" href="/css/site.css">
 {{ partial "additional_css.html" . }}
