--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
 <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ .Site.BaseURL }}/index.xml">
 
-{{ if eq .URL "/" }}
+{{ if eq .Page.RelPermalink "/" }}
 <title>{{ .Title }}</title>
 <meta property='og:title' content="{{ .Title }}">
 <meta property="og:type" content="website">
