--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -2,10 +2,10 @@
 <div class="card mt-4">
     <div class="card-body">
         {{ if .Paginator.HasNext }}
-        <a class="btn btn-outline-primary" href="{{ .URL }}page/{{ .Paginator.Next.PageNumber }}"><i class="fa fa-chevron-left"></i> Older</a>
+        <a class="btn btn-outline-primary" href="{{ .Page.RelPermalink }}page/{{ .Paginator.Next.PageNumber }}"><i class="fa fa-chevron-left"></i> Older</a>
         {{ end }}
         {{ if .Paginator.HasPrev }}
-        <a class="btn btn-outline-primary float-right" href="{{ .URL }}page/{{ .Paginator.Prev.PageNumber }}">Newer <i class="fa fa-chevron-right"></i></a>
+        <a class="btn btn-outline-primary float-right" href="{{ .Page.RelPermalink }}page/{{ .Paginator.Prev.PageNumber }}">Newer <i class="fa fa-chevron-right"></i></a>
         {{ end }}
     </div>
 </div>
