--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,5 @@
-{{ $jquery := resources.Get "js/jquery-3.4.0.slim.min.js" }}
-{{ $popper := resources.Get "js/popper-1.15.0.min.js" }}
-{{ $bootstrap := resources.Get "js/bootstrap-4.3.1.min.js" }}
-{{ $js := slice $jquery $popper $bootstrap | resources.Concat "js/bundle.js" | resources.Minify }}
+{{ $jquery := resources.Get "js/jquery-3.4.0.slim.min.js" | resources.Minify }}
+{{ $popper := resources.Get "js/popper-1.15.0.min.js" | resources.Minify }}
+{{ $bootstrap := resources.Get "js/bootstrap-4.3.1.min.js" | resources.Minify }}
+{{ $js := slice $jquery $popper $bootstrap | resources.Concat "js/bundle.js" }}
 <script src="{{ $js.RelPermalink }}"></script>
