--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,7 +16,7 @@
                 {{ if and (.Site.Params.PoweredByHugo) (eq .Site.Params.PoweredByHugo "True") }}
                 Powered by <a href="http://gohugo.io" target="_blank">Hugo</a><br />
                 {{ end }}
-                <a href="/cookies">Cookies policy</a>
+                <a href="/privacy-policy">Privacy policy</a>
             </p>
         </div>
     </div>
