--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,5 +1,6 @@
 {{ $jquery := resources.Get "js/jquery-3.4.1.slim.min.js" | resources.Minify }}
 {{ $popper := resources.Get "js/popper-1.15.0.min.js" | resources.Minify }}
 {{ $bootstrap := resources.Get "js/bootstrap-4.3.1.min.js" | resources.Minify }}
-{{ $js := slice $jquery $popper $bootstrap | resources.Concat "js/bundle.js" }}
-<script src="{{ $js.RelPermalink }}"></script>
+{{ $JS := slice $jquery $popper $bootstrap | resources.Concat "js/bundle.js" }}
+{{ $secureJS := $JS | resources.Fingerprint "sha512" }}
+<script src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
