--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
 
             <div class="row">
                 <div class="col-md-8">
-                    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+                    {{ $paginator := .Paginate (where .Site.RegularPages "Type" "post") }}
                     {{ range $paginator.Pages }}
                         {{ .Render "li" }}
                     {{ end }}
