--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -9,9 +9,9 @@
     {{ if .Site.Menus.top }}
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-        {{ range .Site.Menus.top }}
-            <li class="nav-item {{if hasPrefix $.URL .URL }} active{{end}}">{{ .Pre }}<a class="nav-link" href="{{ .URL }}">{{ .Name }}</a></li>
-        {{end}}
+            {{ range .Site.Menus.top }}
+            <li class="nav-item {{ if hasPrefix $.RelPermalink .URL }} active{{ end }}"><a class="nav-link" href="{{ .URL }}">{{ .Name }}</a></li>
+            {{end}}
         </ul>
     </div>
     {{end}}
