--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,44 +1,70 @@
 <div class="sidebar">
 
   {{ if .Site.Menus.main }}
-  <div class="card mt-4">
+  <div class="card mt-4 d-none d-md-block d-lg-block d-xl-block">
       <div class="card-body">
           <h3 class="my-0 font-weight-normal">Main menu</h3>
           <ul class="list-unstyled">
-          {{ $currentNode := . }}
-          {{ range .Site.Menus.main }}
+              {{ $currentNode := . }}
+              {{ range .Site.Menus.main }}
               <li>{{ .Pre }}<a href="{{ .URL }}" title="{{ .Name }}">{{ .Name }}</a></li>
-          {{end}}
+              {{end}}
           </ul>
       </div>
+  </div>
+  <div class="card mt-4 d-md-none d-lg-none d-xl-none">
+      <h3 class="my-0 font-weight-normal" style="padding-top: 5px; text-align: center;">Main menu</h3>
+      <ul class="list-group">
+          {{ $currentNode := . }}
+          {{ range .Site.Menus.main }}
+          <a href="{{ .URL }}" title="{{ .Name }}"><li class="list-group-item">{{ .Pre }}{{ .Name }}</li></a>
+          {{end}}
+      </ul>
   </div>
   {{ end }}
 
   {{ if .Site.Menus.social }}
-  <div class="card mt-4">
+  <div class="card mt-4 d-none d-md-block d-lg-block d-xl-block">
       <div class="card-body">
           <h3 class="my-0 font-weight-normal">Social networks</h3>
           <ul class="list-unstyled">
-          {{ $currentNode := . }}
-          {{ range .Site.Menus.social }}
+              {{ $currentNode := . }}
+              {{ range .Site.Menus.social }}
               <li>{{ .Pre }}<a href="{{ .URL }}" title="{{ .Name }}">{{ .Name }}</a></li>
-          {{end}}
+              {{end}}
           </ul>
       </div>
+  </div>
+  <div class="card mt-4 d-md-none d-lg-none d-xl-none">
+      <h3 class="my-0 font-weight-normal" style="padding-top: 5px; text-align: center;">Social networks</h3>
+      <ul class="list-group">
+          {{ $currentNode := . }}
+          {{ range .Site.Menus.social }}
+          <a href="{{ .URL }}" title="{{ .Name }}"><li class="list-group-item">{{ .Pre }} {{ .Name }}</li></a>
+          {{end}}
+      </ul>
   </div>
   {{ end }}
 
   {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
       {{ if in $.Site.Params.TaxonomiesInSidebar $taxonomyname }}
-      <div class="card mt-4">
+      <div class="card mt-4 d-none d-md-block d-lg-block d-xl-block">
           <div class="card-body">
               <h3 class="my-0 font-weight-normal text-capitalize">{{ $taxonomyname }}</h3>
               <ul class="list-unstyled">
-              {{ range $name, $value := $taxonomy }}
+                  {{ range $name, $value := $taxonomy }}
                   <li><a href="/{{ $taxonomyname }}/{{ $name | urlize }}" title="{{ $name }}">{{ $name }}</a></li>
-              {{ end }}
+                  {{ end }}
               </ul>
           </div>
+      </div>
+      <div class="card mt-4 d-md-none d-lg-none d-xl-none">
+          <h3 class="my-0 font-weight-normal text-capitalize" style="padding-top: 5px; text-align: center;">{{ $taxonomyname }}</h3>
+          <ul class="list-group">
+              {{ range $name, $value := $taxonomy }}
+              <a href="/{{ $taxonomyname }}/{{ $name | urlize }}" title="{{ $name }}"><li class="list-group-item">{{ $name }}</li></a>
+              {{ end }}
+          </ul>
       </div>
       {{ end }}
   {{ end }}
