--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,7 +5,6 @@
       <div class="card-body">
           <h3 class="my-0 font-weight-normal">Main menu</h3>
           <ul class="list-unstyled">
-              {{ $currentNode := . }}
               {{ range .Site.Menus.main }}
               <li>{{ .Pre }}<a href="{{ .URL }}" title="{{ .Name }}">{{ .Name }}</a></li>
               {{end}}
@@ -15,7 +14,6 @@
   <div class="card mt-4 d-md-none d-lg-none d-xl-none">
       <h3 class="my-0 font-weight-normal" style="padding-top: 5px; text-align: center;">Main menu</h3>
       <ul class="list-group">
-          {{ $currentNode := . }}
           {{ range .Site.Menus.main }}
           <a href="{{ .URL }}" title="{{ .Name }}"><li class="list-group-item">{{ .Pre }}{{ .Name }}</li></a>
           {{end}}
@@ -28,7 +26,6 @@
       <div class="card-body">
           <h3 class="my-0 font-weight-normal">Social networks</h3>
           <ul class="list-unstyled">
-              {{ $currentNode := . }}
               {{ range .Site.Menus.social }}
               <li>{{ .Pre }}<a href="{{ .URL }}" title="{{ .Name }}">{{ .Name }}</a></li>
               {{end}}
@@ -38,7 +35,6 @@
   <div class="card mt-4 d-md-none d-lg-none d-xl-none">
       <h3 class="my-0 font-weight-normal" style="padding-top: 5px; text-align: center;">Social networks</h3>
       <ul class="list-group">
-          {{ $currentNode := . }}
           {{ range .Site.Menus.social }}
           <a href="{{ .URL }}" title="{{ .Name }}"><li class="list-group-item">{{ .Pre }} {{ .Name }}</li></a>
           {{end}}
@@ -52,8 +48,8 @@
           <div class="card-body">
               <h3 class="my-0 font-weight-normal text-capitalize">{{ $taxonomyname }}</h3>
               <ul class="list-unstyled">
-                  {{ range $name, $value := $taxonomy }}
-                  <li><a href="/{{ $taxonomyname }}/{{ $name | urlize }}" title="{{ $name }}">{{ $name }}</a></li>
+                  {{ range $taxonomy }}
+                  <li><a href="{{ .Page.Permalink }}" title="{{ .Page.Title }}">{{ .Page.Title }}</a></li>
                   {{ end }}
               </ul>
           </div>
@@ -61,8 +57,8 @@
       <div class="card mt-4 d-md-none d-lg-none d-xl-none">
           <h3 class="my-0 font-weight-normal text-capitalize" style="padding-top: 5px; text-align: center;">{{ $taxonomyname }}</h3>
           <ul class="list-group">
-              {{ range $name, $value := $taxonomy }}
-              <a href="/{{ $taxonomyname }}/{{ $name | urlize }}" title="{{ $name }}"><li class="list-group-item">{{ $name }}</li></a>
+              {{ range $taxonomy }}
+              <a href="{{ .Page.Permalink }}" title="{{ .Page.Title }}"><li class="list-group-item">{{ .Page.Title }}</li></a>
               {{ end }}
           </ul>
       </div>
