--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,17 +1,8 @@
 {{ if not (isset .Params "no_comments") }}
+{{ if .Site.DisqusShortname }}
 <div id="disqus_thread"></div>
 <script>
-    /**
-     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-     */
-    /*
-    var disqus_config = function () {
-        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() {  // DON'T EDIT BELOW THIS LINE
+    (function() {
         var d = document, s = d.createElement('script');
         
         s.src = '//{{ .Site.DisqusShortname }}.disqus.com/embed.js';
@@ -21,4 +12,31 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+{{ end }}
+{{ if .Site.Params.Swlcs }}
+{{ $resource := (replace (substr .RelPermalink "1" "-1") "/" "_") }}
+<section class="post-comments">
+    <h3>Comments</h3>
+    {{ $comments := index $.Site.Data.comments $resource }}
+    {{ range $comments }}
+    <div class="card mt-4">
+    <div class="card-body">
+        <strong>{{ .name }}</strong> on {{ (time .date).Format "2006-01-02 15:04:05 MST" }} said:
+        <p>{{ .content | markdownify }}</p>
+    </div>
+    </div>
+    {{ else }}
+    <p>Nothing yet.</p>
+    {{ end }}
+
+    <h3>Say something</h3>
+    <form>
+        <div class="form-group"><input type="hidden" class="form-control" name="resource" id="resource" aria-describedby="resource" value="{{ $resource }}"></div>
+        <div class="form-group"><input type="text" class="form-control" name="name" id="name" aria-describedby="name" placeholder="Your name"></div>
+        <div class="form-group"><input type="email" class="form-control" name="email" id="email1" aria-describedby="email" placeholder="Your email"></div>
+        <div class="form-group"><textarea class="form-control" id="comment" name="comment" rows="10" placeholder="Your message. Feel free to use Markdown."></textarea></div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</section>
+{{ end }}
 {{ end }}
