--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,6 +1,7 @@
-{{ $jquery := resources.Get "js/jquery-3.4.1.slim.min.js" | resources.Minify }}
+{{ $jquery := resources.Get "js/jquery-3.5.1.min.js" | resources.Minify }}
 {{ $popper := resources.Get "js/popper-1.15.0.min.js" | resources.Minify }}
 {{ $bootstrap := resources.Get "js/bootstrap-4.3.1.min.js" | resources.Minify }}
-{{ $JS := slice $jquery $popper $bootstrap | resources.Concat "js/bundle.js" }}
+{{ $swlcs := resources.Get "js/swlcs.js" | resources.ExecuteAsTemplate "swlcs.js" . | resources.Minify }}
+{{ $JS := slice $jquery $popper $bootstrap $swlcs | resources.Concat "js/bundle.js" }}
 {{ $secureJS := $JS | resources.Fingerprint "sha512" }}
 <script src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
