--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -39,11 +39,12 @@
     </div>
     {{ end }}
     <aside>
+        <h3>Share</h3>
         <div class="section share">
-            <a href="http://www.facebook.com/sharer.php?src=bm&u={{ .Permalink }}&t={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fab fa-facebook"></i></a>
-            <a href="http://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}&tw_p=tweetbutton" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fab fa-twitter"></i></a>
-            <a href="http://getpocket.com/edit?url={{ .Permalink }}&title={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fab fa-get-pocket"></i></a>
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}" onclick="window.open(this.href, 'PCwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;"><i class="fab fa-linkedin"></i></a>
+            <a target="_blank" href="http://www.facebook.com/sharer.php?src=bm&u={{ .Permalink }}&t={{ .Title }}"><i class="fab fa-facebook fa-fw fa-3x"></i></a>
+            <a target="_blank" href="http://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}&tw_p=tweetbutton"><i class="fab fa-twitter fa-fw fa-3x"></i></a>
+            <a target="_blank" href="http://getpocket.com/edit?url={{ .Permalink }}&title={{ .Title }}"><i class="fab fa-get-pocket fa-fw fa-3x"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}"><i class="fab fa-linkedin fa-fw fa-3x"></i></a>
         </div>
         {{ partial "related.html" . }}
         {{ partial "comments.html" . }}
