--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light top-navbar">
-    <a class="navbar-brand" href="/" style="max-width: calc(100% - 4.5rem)">
+    <a class="navbar-brand" href="/">
         {{ if .Site.Params.Avatar }}<img class="avatar" src="{{ .Site.Params.Avatar }}" alt="Avatar">{{ end }}
         {{ .Site.Title }}
     </a>
